# chrome_crawler

./: .VERSION  .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.debian2  Makefile  README.md  categories.js  deploy.toml  image.py  package-lock.json  package.json  pyproject.toml  requirements.txt  simplehttp.py  test.json  transform.py  youtube_video.html  youtube_video.json
docs/: build.md  kubernetes.md  references.md
example/: chrome.json  response.html  response.json
scripts/: build.py  build.sh  common.py  deploy.py  generate_keys.sh  jtemplates.py  k8s.sh  manifest.yaml  render_docker_compose.py  run-local.sh
scripts/templates/: docker-compose.yml.j2
src/: .#server.js  browser.js  browser6.js  cmd.js  crawler.js  crawler3.js  duckduckgo.js  example.js  google.js  metrics.js  playstore1.js  security.js  server.js  utils.js  version1.js  version2.js  version3.js  version4.js
src/middlewares/: redis.js  security.js
src/routes/: playstore1.js  version3.js  version4.js  version5.js  version6.js
src/schemas/v1/: chrome_response.json
tests/: duckduckgo.html  duckduckgo2.html  shared.py  test_chrome.py
