[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
authors = ["Xavier Petit <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
lxml = "^4.6.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
