[tool.poetry]
name = "chrome_crawler"
version = "0.1.0"
description = ""
authors = ["Xavier Petit <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
lxml = "^4.6.2"
beautifulsoup4 = "^4.9.3"
toml = "^0.10.2"
fabric = "^2.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
fabric = "^2.6.0"
pylint = "^2.12.1"
isort = "^5.10.1"
autopep8 = "^1.6.0"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
